ChangeLog for package rkwarddev

## 0.04-5 (2011-10-28)
  - set dependency of rkward to >= 0.5.6 to work around a glitch in rkward's package versioning.
    this can cause errors on real 0.5.6 installations because they lack functions introduced
    in 0.5.7 (to add & load a plugin automatically), but shouldn't really break anything

## 0.04-4 (2011-10-26)
  - fixed bug in check for valid modifiers (used to warn when mixed lists with/without modifiers were given)
  - fixed bug in rk.XML.convert() (false output if provided with list without modifiers)
  - added option "check.modifiers" to rk.JS.vars()

## 0.04-3 (2011-10-22)
  - added support for definint doPrintout() JS functions to rk.JS.doc(), rk.plugin.skeleton() and
    rk.plugin.component()
  - added function rk.comment() to add comments to the generated code. it's a <!-- comment --> node
    by default, but will be turned into // comment by rk.paste.JS() and <![CDATA[ comment ]]> for
    logic sections automatically
  - added option "gen.info" to all file producing functions, to add a comment note that the file
    was generated and changes should be made to the script rather than the code directly
  - fixed missing "id.name" option in rk.XML.embed()
  - fixed automatic menu hierarchy generation for lists of legth 1 in rk.XML.pluginmap()

## 0.04-2 (2011-10-21)
  - removed the superfluous "name" option from rk.plugin.skeleton() and rk.plugin.component(); names are now
    always provided by "about", either as an <about> node or just the name.
  - result headers now start at level 1 by default in rk.JS.doc()
  - added option "suggest.required" to rk.plugin.skeleton() to add package requirements as suggestions,
    not dependencies
  - updated skeleton GUI dialog

## 0.04-1 (2011-10-20)
  - added "about" option to rk.XML.plugin() to overrule pluginmap defaults
  - added rk.plugin.component(), i.e. modularized the component generation, to allow for more than one